<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>ojp-server</artifactId>
    <version>0.3.2-snapshot</version>

    <parent>
        <groupId>org.openjproxy</groupId>
        <artifactId>ojp-parent</artifactId>
        <version>0.3.2-snapshot</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <properties>
        <grpc.version>1.78.0</grpc.version>
        <netty.version>4.1.130.Final</netty.version>
        <slf4j.version>2.0.17</slf4j.version>
        <jib.plugin.version>3.4.5</jib.plugin.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--Set transient dependencies of Guava to compatible version-->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>32.1.0-jre</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.openjproxy</groupId>
            <artifactId>ojp-grpc-commons</artifactId>
            <version>0.3.2-snapshot</version>
        </dependency>

        <!-- OJP Datasource API and default HikariCP provider -->
        <dependency>
            <groupId>org.openjproxy</groupId>
            <artifactId>ojp-datasource-api</artifactId>
            <version>0.3.2-snapshot</version>
        </dependency>
        <dependency>
            <groupId>org.openjproxy</groupId>
            <artifactId>ojp-datasource-hikari</artifactId>
            <version>0.3.2-snapshot</version>
        </dependency>
        
        <!-- OJP XA Pool Commons (Phase 1 integration) -->
        <dependency>
            <groupId>org.openjproxy</groupId>
            <artifactId>ojp-xa-pool-commons</artifactId>
            <version>0.3.2-snapshot</version>
        </dependency>

        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty</artifactId>
            <version>${grpc.version}</version>
        </dependency>

        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-services</artifactId>
            <version>${grpc.version}</version>
        </dependency>

        <!-- OPEN SOURCE DATABASE DRIVERS -->
        <!-- H2, PostgreSQL, MySQL, and MariaDB drivers are now loaded from ojp-libs directory -->
        <!-- This allows customers to control driver versions and reduces the base JAR size -->
        <!-- See: documents/analysis/OPEN_SOURCE_DRIVERS_IN_OJP_LIBS.md -->

        <!-- PROPRIETARY DATABASE DRIVERS PLACEHOLDER -->
        <!-- CI workflows dynamically add Oracle, SQL Server, and DB2 drivers here -->
        <!-- Do not commit proprietary drivers to this pom.xml -->

        <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>6.3.3</version>
        </dependency>

        <!-- JTA API (required for XA transaction support) -->
        <!-- https://mvnrepository.com/artifact/jakarta.transaction/jakarta.transaction-api -->
        <dependency>
            <groupId>jakarta.transaction</groupId>
            <artifactId>jakarta.transaction-api</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.5.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.21.0</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!-- Logback Classic (includes logback-core and provides SLF4J binding) -->
        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/at.yawk.lz4/lz4-java -->
        <!-- Replaced net.jpountz.lz4:lz4 to fix CVE-2025-66566, CVE-2025-12183 -->
        <dependency>
            <groupId>at.yawk.lz4</groupId>
            <artifactId>lz4-java</artifactId>
            <version>1.10.2</version>
        </dependency>

        <!-- OpenTelemetry API -->
        <!-- https://mvnrepository.com/artifact/io.opentelemetry/opentelemetry-api -->
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-api</artifactId>
            <version>1.58.0</version>
        </dependency>

        <!-- OpenTelemetry SDK -->
        <!-- https://mvnrepository.com/artifact/io.opentelemetry/opentelemetry-sdk -->
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-sdk</artifactId>
            <version>1.58.0</version>
        </dependency>

        <!-- OpenTelemetry gRPC instrumentation -->
        <!-- https://mvnrepository.com/artifact/io.opentelemetry.instrumentation/opentelemetry-grpc-1.6 -->
        <dependency>
            <groupId>io.opentelemetry.instrumentation</groupId>
            <artifactId>opentelemetry-grpc-1.6</artifactId>
            <version>2.17.1-alpha</version>
        </dependency>

        <!-- Prometheus exporter -->
        <!-- https://mvnrepository.com/artifact/io.opentelemetry/opentelemetry-exporter-prometheus -->
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-exporter-prometheus</artifactId>
            <version>1.52.0-alpha</version>
        </dependency>

        <!-- HTTP server for metrics endpoint -->
        <!-- https://mvnrepository.com/artifact/io.prometheus/simpleclient_httpserver -->
        <dependency>
            <groupId>io.prometheus</groupId>
            <artifactId>simpleclient_httpserver</artifactId>
            <version>0.16.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.12.2</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.21.0</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.12.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Apache Calcite SQL Parser and Optimizer -->
        <!-- https://mvnrepository.com/artifact/org.apache.calcite/calcite-core -->
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-core</artifactId>
            <version>1.41.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <!-- Exclude signature files to prevent "Invalid signature file digest" errors -->
                            <!-- This is necessary when shading signed JARs (added dynamically by CI workflows) -->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/*.EC</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation=
                                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.openjproxy.grpc.server.GrpcServer</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Docker image: Jib plugin -->
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib.plugin.version}</version>
                <configuration>
                    <from>
                        <image>eclipse-temurin:22-jre</image>
                    </from>
                    <to>
                        <image>rrobetti/ojp:0.3.2-snapshot</image>
                    </to>
                    <container>
                        <mainClass>org.openjproxy.grpc.server.GrpcServer</mainClass>
                        <ports>
                            <port>1059</port>
                        </ports>
                        <jvmFlags>
                            <jvmFlag>-Dojp.libs.path=/opt/ojp/ojp-libs</jvmFlag>
                        </jvmFlags>
                    </container>
                    <!-- Include open source JDBC drivers in Docker image ("batteries included") -->
                    <!-- Drivers are downloaded to ojp-libs during build -->
                    <extraDirectories>
                        <paths>
                            <path>
                                <from>ojp-libs</from>
                                <into>/opt/ojp/ojp-libs</into>
                            </path>
                        </paths>
                    </extraDirectories>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>